--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,8 +50,12 @@ dependencies {
     implementation 'com.squareup.okhttp3:logging-interceptor:3.12.6'
     implementation 'com.github.bumptech.glide:glide:4.9.0'
     implementation 'com.google.android.gms:play-services-vision:20.1.3'
-    implementation 'com.google.mlkit:barcode-scanning:16.1.1'
+    implementation 'com.google.mlkit:face-detection:16.0.4'
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.3.0"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.9"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:"
+    implementation "androidx.cardview:cardview:1.0.0"
+    implementation "androidx.recyclerview:recyclerview:1.1.0"
+    implementation "androidx.activity:activity-ktx:1.2.1"
+    implementation "androidx.preference:preference-ktx:1.1.1"
 }
